@@ -68,25 +68,6 @@ INFO_DEPS = $(srcdir)/poke.info
 
 app_DATA = nodelist
 
-# Generation of the HTML manual.
-#
-# We do some changes in the .html files generated by makeinfo:
-#
-# - The "Table of Contents" in poke.html/index.html is not emitted.
-#   This is because the Top node also provides a table of contents,
-#   that is much more informative.
-#
-# - makeinfo generates an <h3> for footnote marks (N).  This looks
-#   like a bug, since the "Footnotes" heading is <h4> itself.  Using a
-#   header for this is ugly anyway.
-
-html-local:
-	sed -i -e '/^<h2.*contents-heading.*/,/<a name="Top">.*/d' \
-               -e 's/^<h1.*settitle.*//' \
-	  $(builddir)/poke.html/index.html
-	sed -i -e 's#^<h3>\(.*name="FOOT.*\)</h3>#<strong>\1</strong>#' \
-	  $(builddir)/poke.html/*.html
-
 # Generation of the plain text manual.
 # We distribute it in the tarballs, since it requires makeinfo to make.
 
